style.css
/* ... */
#column-1 {
    grid-template-columns: 1fr;
    grid-template-rows: 160px 1fr 1fr;
    /* height: 100vh; */
}

#column-2 {
    grid-template-columns: 1fr;
    grid-template-rows: 160px 1fr 1fr;
    /* height: 100vh; */
}

#column-3 {
    grid-template-columns: 1fr;
    grid-template-rows: 160px 1fr 1fr;
    /* height: 100vh; */
}

#noGradient {
    background: var(--background-color)
}

.gridContainer {
    display: grid;
    grid-template-rows: auto 1fr;
    grid-template-columns: 1fr;
    height: 100vh;
    width: 100%;
}

.three-columns {
    grid-template-columns: 1.5fr 4.5fr 6fr 0fr;
}

.four-columns {
    grid-template-columns: 1.5fr 4.5fr 2.85fr 3.15fr;
    overflow: hidden;
}

.two-columns {
    grid-template-columns: 3.5fr 8.5fr 0fr 0fr;
}

.three-columns .column {
    background-position: 100%;
}

.four-columns .column {
    background-position: 0%;
}

/* .three-rows {
    grid-template-rows: 0.8fr 1.1fr 1.1fr;
}

.two-rows {
    grid-template-rows: 0.2fr 0.8fr;
} */

#summary {
    grid-row: 2;
    grid-column: 1;
    z-index: 2;
    margin-right: var(--spacing-26x);
}

#featured {
    grid-row: 2;
    grid-column: 2 / -3;
    z-index: 1;
}

.gradient img {
    z-index: 1;
    width: 100%;
}

#item2 {
    grid-row: 2;
    grid-column: 1;
    z-index: 2;
}

#accentText {
    grid-row: 2;
    grid-column: 1;
    z-index: 3;
    align-content: end;
}

.visible {
    position: relative;
    left: 1px;
    transition: var(--transition-duration);
    transition-delay: var(--transition-delay);
    transition-timing-function: var(--transition-function);
}

.hidden {
    position: relative;
    left: -1000px;
    transition: var(--transition-duration);
    transition-timing-function: var(--transition-function);
}

.visibleTop {
    position: relative;
    top: 1px;
    transition: var(--transition-duration);
    transition-delay: calc(var(--transition-delay)*2);
    transition-timing-function: var(--transition-function);
}

.visibleTopLate {
    position: relative;
    top: 1px;
    transition: var(--transition-duration);
    transition-delay: calc(var(--transition-delay)*2.3);
    transition-timing-function: var(--transition-function);
}

.hiddenTop {
    position: relative;
    top: -300px;
    transition: var(--transition-duration);
    transition-timing-function: var(--transition-function);
}

#contacts {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-column: 1;
    grid-row: 3;
    z-index: 2;
    overflow: hidden;
    padding-top: var(--spacing-4x);
}

#contactLinks {
    grid-column: 1;
    display: flex;
    flex-direction: column;
    gap: var(--spacing-3x);
}

#contactInfo {
    grid-column: 2;
    display: flex;
    flex-direction: column;
    gap: var(--spacing-3x);
}

#about-me {
    grid-row: 2 / -1;
    grid-column: 1;
    z-index: 4;
    padding-right: var(--spacing-8x);
}

#experience {
    grid-row: 2;
    grid-column: 1;
    z-index: 1;
    margin-right: var(--spacing-8x);
}

#education {
    grid-area: -3 / -2;
    z-index: 3;
    margin-right: var(--spacing-8x);
}

.nameYear {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: var(--spacing-2x);
    margin-top: var(--spacing-5x);
}

.projectDescription {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: var(--spacing-2x);
    margin-top: var(--spacing-2x);
    gap: var(--spacing-14x);
}

.skills {
    margin-top: var(--spacing-8x);
}

.skillTags {
    margin-top: var(--spacing-5x);
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: var(--spacing-2x);
}

.skillTag {
    display: flex;
    flex-direction: row;
    gap: var(--spacing-4x);
    width: fit-content;
    height: fit-content;
    align-content: baseline;
    position: relative;
    text-decoration: none;
    border: 1px solid var(--secondary-transparent-30);
    font-family: var(--font-family-button);
    font-size: var(--font-size-button);
    color: var(--secondary-color);
    text-transform: uppercase;
    padding: var(--spacing-2x) var(--spacing-4x);
    width: fit-content;
    border-radius: var(--border-radius-sm);
}

#download-button {
    width: 100%;
    margin-top: var(--spacing-8x);
}

#all-projects-button {
    width: 100%;
    margin-top: var(--spacing-8x);
}

.allProjects {
    padding-right: var(--spacing-8x);
}

.gradient {
    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
    background-size: 400% 400%;
    margin-top: var(--spacing-8x);
    animation: gradient 15s ease infinite;
    max-height: 35vh;
}

.summary .gradient {
    width: 100%;
    height: 88px;
}

.featured .gradient {
    width: 100%;
    /* height: 32%; */
    overflow: hidden;
}

@keyframes gradient {
    0% {
        background-position: 0% 50%;
    }

    50% {
        background-position: 100% 50%;
    }

    100% {
        background-position: 0% 50%;
    }
}

.nameLogo {
    font-family: var(--font-family-heading);
    font-size: var(--spacing-17x);
    color: var(--secondary-color);
    margin-top: var(--spacing-2x);
    margin-bottom: var(--spacing-1x);
}
/* ... */

